fixed menu tops not aligning in secondary menu

--- a/sass/_background_texture.scss
+++ b/sass/_background_texture.scss
@@ -17,4 +17,7 @@
   .top-navigation {
     background: rgba(255,255,255,0.2);
   }
+  .excerpt {
+    opacity: 1;
+  }
 }
